src/test/deca/context/invalid/our_tests/jb-wrong-override1.deca
// Description:
//    Override with different signature
//
// Resultats:
//    Should throw Contextual error (rule 2.7)
//
// Historique:
//    cree le 22/01/2017

class A {
    boolean equals(int a) {}
}
